--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <center><h1>The Doggy Brad Speed Test</h1></center>
-<h3>Powered by <a href="https://openspeedtest.com/">OpenSpeedTest</a></h3>
+<h3>The SpeedTest Platform powered by <a href="https://openspeedtest.com/">OpenSpeedTest</a></h3>
 
 <!--OST Widget code start--><div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/Get-widget.php"></iframe></div><!-- OST Widget code end -->
 </body>
