--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Free Super Accurate Speed Test">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+<title>The Doggy Brad Speed Test - The Super Accurate Global Speed Test</title>
 <body>
 
 <center><h1>The Doggy Brad Speed Test</h1></center>
