--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Free Super Accurate Speed Test">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+ <link rel="shortcut icon" type="image/x-icon" href="png-clipart-macos-app-icons-speedtest-thumbnail.ico?">
 <title>The Doggy Brad Speed Test - The Super Accurate Global Speed Test</title>
 <body>
 
