--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <h3>The SpeedTest Platform is powered by <a href="https://openspeedtest.com/">OpenSpeedTest</a></h3>
 <center><h2><a href="https://github.com/thedoggybrad/speedtest/blob/main/README.md">READ ME</a></h2></center>
 
-<!--OST Widget code start--><div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="Get-Widget.html<iframe></div><!-- OST Widget code end -->
+<!--OST Widget code start--><div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/Get-widget.php"></iframe></div><!-- OST Widget code end -->
+
 </body>
 </html>
