--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <h3>The SpeedTest Platform is powered by <a href="https://speedtest.net">Ookla Speed Test</a></h3>
 <center><h2><a href="https://github.com/thedoggybrad/speedtest/blob/main/README.md">READ ME</a></h2></center>
 
-<iframe width="100%" height="650px" frameborder="0" src="https://thedoggybrad.speedtestcustom.com"></iframe>
+<!--OST Widget code start--><div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/ost-self-hosted.php"></iframe<!-- OST Widget code end -->
+
 
 
 </body>
