--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Free Super Accurate Speed Test">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
- <link rel="shortcut icon" type="image/x-icon" href="favico.png?">
-<title>The Doggy Brad Speed Test - The Super Accurate Global Speed Test</title>
-<body>
-
-<center><h1>The Doggy Brad Speed Test</h1></center>
-<h3>The SpeedTest Platform is powered by <a href="https://speedtest.net">Ookla Speed Test</a></h3>
-<center><h2><a href="https://github.com/thedoggybrad/speedtest/blob/main/README.md">READ ME</a></h2></center>
-
-<!--OST Widget code start--><div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/ost-self-hosted.php"></iframe<!-- OST Widget code end -->
-
-
-
-</body>
+   <head>
+      <title>The Doggy Brad Speed Test</title>
+      <meta http-equiv = "refresh" content = "3; url = https://thedoggybrads.dualstack.speedtestcustom.com/" />
+   </head>
+   <body>
+      <p>Redirecting to our new speedtest platform. Click here if not redirected automatically <a href= https://thedoggybrads.dualstack.speedtestcustom.com/ Click Here></p>
+   </body>
 </html>
