--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <meta http-equiv = "refresh" content = "3; url = https://thedoggybrads.dualstack.speedtestcustom.com/" />
    </head>
    <body>
-      <p>Redirecting to our new speedtest platform. Click here if not redirected automatically <a href= https://thedoggybrads.dualstack.speedtestcustom.com/ Click Here></p>
+      <p>Redirecting to our new speedtest platform. Click here if not redirected automatically <a href="https://thedoggybrads.dualstack.speedtestcustom.com/">The Doggy Brad Speed Test</a> </p>
    </body>
 </html>
