--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
    <head>
       <title>The Doggy Brad Speed Test</title>
-      <meta http-equiv = "refresh" content = "3; url = https://thedoggybrads.dualstack.speedtestcustom.com/" />
+      <meta http-equiv = "refresh" content = "0; url = https://thedoggybrads.dualstack.speedtestcustom.com/" />
+      <link rel="shortcut icon" type="image/jpg" href=favico.png/>
    </head>
    <body>
-      <p>Redirecting to our new speedtest platform. Click here if not redirected automatically <a href="https://thedoggybrads.dualstack.speedtestcustom.com/">The Doggy Brad Speed Test</a> </p>
    </body>
 </html>
