--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <link rel="shortcut icon" href="favicon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
 <meta charset="UTF-8" />
-<script type="text/javascript" src="http://speed.swoopbroadband.com.au/speedtest.js"></script>
+<script type="text/javascript" src="https://librespeed.org/speedtest.js"></script>
 <script type="text/javascript">
 function I(i){return document.getElementById(i);}
 
