--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
    <head>
       <title>The Doggy Brad Speed Test</title>
-      <link rel="shortcut icon" type="image/jpg" href=favico.png/>
+      <link rel="shortcut icon" type="image/jpg" href=favico.png?/>
    </head>
-   <h1>The Doggy Brad Speed Test</h1>
-   <h3>Powered by Meter.net</h3>
+   <center><h1>The Doggy Brad Speed Test</h1></center>
+   <center><h3>Powered by Meter.net</h3></center>
    <div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="https://www.metercustom.net/plugin/?hl=en&th=w"></iframe></div>
    <body>
    </body>
