--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <title>The Doggy Brad Speed Test</title>
       <link rel="shortcut icon" type="image/jpg" href=favico.png?/>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
    <center><h1>The Doggy Brad Speed Test</h1></center>
    <center><h3>Powered by Meter.net</h3></center>
