--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    </head>
    <center><h1>The Doggy Brad Speed Test</h1></center>
    <center><h3>Powered by Meter.net</h3></center>
+   <h4>Note: The sppedtest indicates your real speed when accessing websites or platforms far from your location.</h4>
    <div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="https://www.metercustom.net/plugin/?hl=en&th=w"></iframe></div>
    <body>
    </body>
