--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>The Doggy Brad Speed Test</title>
-      <link rel="shortcut icon" type="image/jpg" href=favico.png?/>
+      <link rel="shortcut icon" type="image/jpg" href=https://thedoggybrad.github.io/speedtest/favico.png?/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
    <center><h1>The Doggy Brad Speed Test</h1></center>
