--- a/engine.html
+++ b/engine.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Engine - The DoggyBrad Speed Test</title>
         <style type="text/css">
             body, html
@@ -10,6 +11,9 @@
         </style>
     </head>
     <body>
+   <center><h1>The Doggy Brad Speed Test</h1></center>
+   <center><h3>Powered by Meter.net</h3></center>
+   <center><h4>Note: The speedtest indicates your real speed when accessing websites or platforms far from your location.</h4></center>
         <iframe width="100%" height="100%" src="https://www.metercustom.net/plugin/?hl=en&th=w"/>
     </body>
 </html>
