--- a/engine.html
+++ b/engine.html
@@ -9,11 +9,16 @@
                 margin: 0; padding: 0; height: 100%; overflow: hidden;
             }
         </style>
+        <script>
+  function resizeIframe(obj) {
+    obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
+  }
+</script>
     </head>
     <body>
    <center><h1>The Doggy Brad Speed Test</h1></center>
    <center><h3>Powered by Meter.net</h3></center>
    <center><h4>Note: The speedtest indicates your real speed when accessing websites or platforms far from your location.</h4></center>
-        <iframe width="100%" height="100%" src="https://www.metercustom.net/plugin/?hl=en&th=w"/>
+        <iframe src="https://www.metercustom.net/plugin/?hl=en&th=w" frameborder="0" scrolling="no" onload="resizeIframe(this)" />
     </body>
 </html>
