--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <center><h4>Note: The speedtest indicates your real speed when accessing websites or platforms far from your location.</h4></center>
    <div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="https://www.metercustom.net/plugin/?hl=en&th=w"></iframe></div>
  
+<center><a href="https://github.com/thedoggybrad/speedtest">About us</a></center>
       <body>
    </body>
 </html>
