--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>The Doggy Brad Speed Test - The Universal Speed Test for everyone</title>
+      <title>ADKILLED-METER.NET - Speedtest with no ads</title>
       <link rel="shortcut icon" type="image/jpg" href=https://thedoggybrad.github.io/speedtest/favico.png?/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
