--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
       <body>
-   <center><h1>The Doggy Brad Speed Test</h1></center>
+   <center><h1>ADKILLED-METER.NET</h1></center>
    <center><h3>Powered by Meter.net</h3></center>
-   <center><h4>Note: The speedtest indicates your real speed when accessing websites or platforms far from your location.</h4></center>
-   <center><a href="https://github.com/thedoggybrad/speedtest">About us</a></center>
+   <center><h4>Speedtest with no ads.</h4></center>
+   <center><a href="https://github.com/thedoggybrad/ADKILLED-METER.NET">About us</a></center>
    <div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="https://www.metercustom.net/plugin/?hl=en&th=w"></iframe></div>
       </body>
 </html>
