--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
    <center><a href="https://github.com/thedoggybrad/ADKILLED-METER.NET">About us</a></center>
    </head>
       <body>
-   <div style="width:720px;text-align:right;"><iframe style="border:none;overflow:hidden !important;width:100%;height:360px;" src="https://www.metercustom.net/plugin/?hl=en&th=w"></iframe>Provided by <a href="https://www.meter.net">Meter.net</a></div>
+  <center><div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="https://www.metercustom.net/plugin/?hl=en&th=w"></iframe></div></center>
       </body>
 </html>
