--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <title>ADKILLED-METER.NET - Speedtest with no ads</title>
          <body style="background-color:white;">
-      <link rel="shortcut icon" type="image/png" href=favico.png?/>
+      <link rel="shortcut icon" type="image/png" href=https://thedoggybrad.github.io/ADKILLED-METER.NET/favico.png/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
    <center><h1>ADKILLED-METER.NET</h1></center>
    <center><h3>Powered by Meter.net</h3></center>
